--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
-    "sequelize": "^6.37.0"
+    "sequelize": "^6.37.0",
+    "uniqid": "^5.4.0"
   }
 }
