--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "buffer-serializer": "^1.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonapi-serializer": "^3.6.9",
